# example-fastapi-sqlmodel-alembic

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
example_fastapi_sqlmodel_alembic/: di.py
example_fastapi_sqlmodel_alembic/api/: app.py  router.py
example_fastapi_sqlmodel_alembic/database/: di.py  gateway.py
example_fastapi_sqlmodel_alembic/migrations/: env.py
example_fastapi_sqlmodel_alembic/migrations/versions/: 1b5f63490e24_initialize.py  44e23b8c595e_add_user.py  970e50ccd8cc_add_post.py
example_fastapi_sqlmodel_alembic/posts/: di.py  model.py  usecase.py
example_fastapi_sqlmodel_alembic/users/: di.py  model.py  usecase.py
