[tool.poetry]
name = "example-fastapi-sqlmodel-alembic"
version = "0.1.0"
description = ""
authors = ["hamadatakaki <i16hamadat@gmail.com>"]
readme = "README.md"
packages = [{include = "example_fastapi_sqlmodel_alembic"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
sqlmodel = "^0.0.8"
alembic = "^1.11.1"
injector = "^0.20.1"
flake8-pyproject = "^1.2.3"
pydantic = "^1.10.8"
uvicorn = "^0.22.0"
ipython = "^8.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = "example_fastapi_sqlmodel_alembic/migrations"
